--- a/playbooks/web_dev_site/acme.yml
+++ b/playbooks/web_dev_site/acme.yml
@@ -3,95 +3,100 @@
 # a real certificate from Let's Encrypt, assuming we're not on the Vagrant box, where it's
 # impossible to pass the acme challenge as that's inside our firewall and DNS won't be
 # pointing to it anyway.
-- name: "Create required directories"
-  ansible.builtin.file:
-    path: "{{ item }}"
-    state: directory
-    owner: root
-    group: root
-    mode: u=rwx,g=x,o=x
-  with_items:
-    - "{{ letsencrypt_account_dir }}"
-    # - certs
-    # - csrs
-    # - keys
 
-# TODO This generates the key every time. We should only do this if the key file doesn't exist at all
+# TODO This seems to generate a key every time. I don't think it changes the
+# existing one, though. Double-check. And can we not bother with the slow
+# generation?
 - name: Generate a Letsencrypt Account Key (RSA, 4096 bits is the default)
   community.crypto.openssl_privatekey:
-    path: "{{ letsencrypt_account_key_file }}"
+    path: "{{ acme_account_key_file }}"
     regenerate: never
 
-- name: Generate an OpenSSL private key with the default values (4096 bits, RSA)
-  community.crypto.openssl_privatekey:
-    path: "{{ dev_key_path }}"
+- name: Inspect existing certificate information for all sites
+  # A certificate should always exist, but it might be self-signed. We only
+  # want to generate a new one if it's self-signed.
+  community.crypto.x509_certificate_info:
+    path: "{{ acme_certs_dir }}/{{ site.server_name }}.crt"
+  register: existing_cert_info
+  with_items: "{{ websites }}"
+  loop_control:
+    loop_var: site
 
-- name: Generate an OpenSSL Certificate Signing Request
-  community.crypto.openssl_csr_pipe:
-    privatekey_path: "{{ dev_key_path }}"
-    common_name: "{{ dev_server_name }}"
-    email_address: "{{ letsencrypt_email }}"
-    organization_name: "{{ letsencrypt_organisation }}"
-    country_name: GB
-    subject_alt_name: "{{ ([dev_server_name] + (dev_server_aliases | default([]))) | map('regex_replace', '^', 'DNS:') | list }}"
-  register: csr
+- name: Print existing certificate information
+  ansible.builtin.debug:
+    var: existing_cert_info.results
+
+- name: Record current certificate issuer for each site so we can tell if it's self-signed later
+  ansible.builtin.set_fact:
+    cert_issuers: >-
+      {{ dict(existing_cert_info.results | map(attribute='site.server_name') |
+          zip(existing_cert_info.results | map(attribute='authority_cert_issuer') | map('first')))
+      }}
+
+# - name: Generate OpenSSL private keys with the default values for all sites (4096 bits, RSA)
+#   community.crypto.openssl_privatekey:
+#     path: "{{ acme_keys_dir }}/{{ site.server_name }}.key"
+#   with_items: "{{ websites }}"
+#   loop_control:
+#     loop_var: site
+
+# - name: Generate OpenSSL Certificate Signing Requests for all sites
+#   community.crypto.openssl_csr:
+#     path: "{{ acme_csr_dir }}/{{ site.server_name }}.csr"
+#     privatekey_path: "{{ acme_keys_dir }}/{{ site.server_name }}.key"
+#     common_name: "{{ site.server_name }}"
+#     email_address: "{{ acme_email }}"
+#     organization_name: "{{ acme_organisation }}"
+#     country_name: GB
+#     subject_alt_name: "{{ ([site.server_name] + (site.aliases | default([]))) | map('regex_replace', '^', 'DNS:') | list }}"
+#   register: csr
+#   with_items: "{{ websites }}"
+#   loop_control:
+#     loop_var: site
 
 # - name: Print CSR
 #   ansible.builtin.debug:
-#     var: csr.csr
+#     var: csr
 
-- name: Get certificate information
-  community.crypto.x509_certificate_info:
-    path: "{{ dev_cert_path }}"
-  register: cert_info
+# - name: Create ACME challenges for all sites as necessary
+#   community.crypto.acme_certificate:
+#     acme_directory: "{{ acme_directory }}"
+#     acme_version: 2
+#     terms_agreed: true
+#     # This won't deliver a new certificate if there's already a self-signed one
+#     # in place unless we detect that and force it.
+#     force: "{{ self_signed_ca_DNS in cert_info['authority_cert_issuer'] }}"
+#     account_key_src: "{{ letsencrypt_account_key_file }}"
+#     csr_content: "{{ csr.csr }}"
+#     fullchain_dest: "{{ dev_cert_path }}"
+#   register: dev_server_challenge
 
-# - name: Print existing certificate information
+# - name: Debug challenge data
 #   ansible.builtin.debug:
-#     var: cert_info
+#     var: dev_server_challenge
 
-# - name: Print existing certificate information
-#   ansible.builtin.debug:
-#     var: cert_info['authority_cert_issuer']
+# - name: Copy http-01 challenge for dev server (if we've actually been challenged)
+#   ansible.builtin.copy:
+#     # /var/www/html/{{ sample_com_challenge['challenge_data']['sample.com']['http-01']['resource'] }}
+#     # dest: "{{ acme_challenge_dir }}/{{ (dev_server_challenge['challenge_data'][dev_server_name]['http-01']['resource'] | basename) }}"
+#     dest: "{{ well_known_dir }}/{{ dev_server_name }}/acme-challenge/{{ (item.value['http-01']['resource'] | basename) }}"
+#     content: "{{ item.value['http-01']['resource_value'] }}"
+#     owner: root
+#     group: root
+#     mode: '0644'
+#   when: dev_server_challenge is changed # and dev_server_name in dev_server_challenge['challenge_data']
+#   loop: "{{ dev_server_challenge['challenge_data'] | dict2items }}"
 
-- name: Create an ACME challenge for sample.com using a account key file.
-  community.crypto.acme_certificate:
-    acme_directory: "{{ acme_directory }}"
-    acme_version: 2
-    terms_agreed: true
-    # This won't deliver a new certificate if there's already a self-signed one
-    # in place unless we detect that and force it.
-    force: "{{ self_signed_ca_DNS in cert_info['authority_cert_issuer'] }}"
-    account_key_src: "{{ letsencrypt_account_key_file }}"
-    csr_content: "{{ csr.csr }}"
-    fullchain_dest: "{{ dev_cert_path }}"
-  register: dev_server_challenge
-
-- name: Debug challenge data
-  ansible.builtin.debug:
-    var: dev_server_challenge
-
-- name: Copy http-01 challenge for dev server (if we've actually been challenged)
-  ansible.builtin.copy:
-    # /var/www/html/{{ sample_com_challenge['challenge_data']['sample.com']['http-01']['resource'] }}
-    # dest: "{{ acme_challenge_dir }}/{{ (dev_server_challenge['challenge_data'][dev_server_name]['http-01']['resource'] | basename) }}"
-    dest: "{{ well_known_dir }}/{{ dev_server_name }}/acme-challenge/{{ (item.value['http-01']['resource'] | basename) }}"
-    content: "{{ item.value['http-01']['resource_value'] }}"
-    owner: root
-    group: root
-    mode: '0644'
-  when: dev_server_challenge is changed # and dev_server_name in dev_server_challenge['challenge_data']
-  loop: "{{ dev_server_challenge['challenge_data'] | dict2items }}"
-
-- name: Let the challenge be validated and retrieve the cert and intermediate certificate
-  community.crypto.acme_certificate:
-    terms_agreed: true
-    acme_directory: "{{ acme_directory }}"
-    acme_version: 2
-    # This won't deliver a new certificate if there's already a self-signed one
-    # in place unless we detect that and force it.
-    force: "{{ self_signed_ca_DNS in cert_info['authority_cert_issuer'] }}"
-    account_key_src: "{{ letsencrypt_account_key_file }}"
-    csr_content: "{{ csr.csr }}"
-    fullchain_dest: "{{ dev_cert_path }}"
-    data: "{{ dev_server_challenge }}"
-  notify: Reload apache
+# - name: Let the challenge be validated and retrieve the cert and intermediate certificate
+#   community.crypto.acme_certificate:
+#     terms_agreed: true
+#     acme_directory: "{{ acme_directory }}"
+#     acme_version: 2
+#     # This won't deliver a new certificate if there's already a self-signed one
+#     # in place unless we detect that and force it.
+#     force: "{{ self_signed_ca_DNS in cert_info['authority_cert_issuer'] }}"
+#     account_key_src: "{{ letsencrypt_account_key_file }}"
+#     csr_content: "{{ csr.csr }}"
+#     fullchain_dest: "{{ dev_cert_path }}"
+#     data: "{{ dev_server_challenge }}"
+#   notify: Reload apache
