--- a/playbooks/web_dev_site/vars.yml
+++ b/playbooks/web_dev_site/vars.yml
@@ -47,25 +47,25 @@ sites_dir: /var/www/sites
 
 # A few different sites to test with, quite varied:
 websites:
-  # - server_name: "gothick.org.uk"
-  #   aliases:
-  #     - "www.gothick.org.uk"
-  #     - "mattgibsoncreative.co.uk"
-  #     - "www.mattgibsoncreative.co.uk"
-  #     - "mattgibsoncreative.gothick.org.uk"
-  #     - "mattgibsoncreative.com"
-  #     - "www.mattgibsoncreative.com"
-  #     - "mattgetsrunning.com"
-  #     - "www.mattgetsrunning.com"
-  #     - "mattgetsrunning.gothick.org.uk"
-  #   docroot: "{{ sites_dir }}/wordpress/html"
-  #   docroot_owner: wordpress
-  #   docroot_group: users
-  #   allow_override: all
-  #   directory_options: FollowSymLinks
-  #   canonical_rewrite: false
-  #   php_fpm_pool: /run/php/chef-managed-fpm-wordpress.sock
-  #   enable_pagespeed: true
+  - server_name: "gothick.org.uk"
+    aliases:
+      - "www.gothick.org.uk"
+      - "mattgibsoncreative.co.uk"
+      - "www.mattgibsoncreative.co.uk"
+      - "mattgibsoncreative.gothick.org.uk"
+      - "mattgibsoncreative.com"
+      - "www.mattgibsoncreative.com"
+      - "mattgetsrunning.com"
+      - "www.mattgetsrunning.com"
+      - "mattgetsrunning.gothick.org.uk"
+    docroot: "{{ sites_dir }}/wordpress/html"
+    docroot_owner: wordpress
+    docroot_group: users
+    allow_override: all
+    directory_options: FollowSymLinks
+    canonical_rewrite: false
+    php_fpm_pool: /run/php/chef-managed-fpm-wordpress.sock
+    enable_pagespeed: true
 
   # - server_name: "omm.gothick.org.uk"
   #   siteroot: "{{ sites_dir }}/gothick.org.uk/omm.gothick.org.uk"
