--- a/playbooks/web_dev_site/main.yml
+++ b/playbooks/web_dev_site/main.yml
@@ -48,7 +48,9 @@
 
     - name: Create corresponding well-known directory with acme-challenge subdirectory
       ansible.builtin.file:
-        path: "{{ acme_well_known_dir }}/{{ item.server_name }}/acme-challenge"
+        # The path is designed so you can point webroot at acme_well_known_dir/server_name and
+        # things will work as if that was the webroot of the real site.
+        path: "{{ acme_well_known_dir }}/{{ item.server_name }}/.well-known/acme-challenge"
         state: directory
         mode: '0755'
         owner: root
@@ -210,10 +212,47 @@
     - name: Flush handlers
       ansible.builtin.meta: flush_handlers
 
-    - name: Install Letsencrypt certificates
-      ansible.builtin.import_tasks: acme.yml
+    - name: Set certs fact for certbot
+      ansible.builtin.set_fact:
+        certs: >-
+          {{ certs | default([]) +
+          [ {
+            'domains': [ item.server_name ] + (item.aliases | default([])),
+            'email': acme_email,
+            'webroot': acme_well_known_dir + '/' + item.server_name
+          } ]
+          }}
+      when: use_letsencrypt
+      with_items: "{{ websites }}"
+      tags: acme
+
+    - name: Debug certbot_certs
+      ansible.builtin.debug:
+        var: certs
+      tags: acme
+
+    - name: Set up Certbot with the certificates set up as above for our websites
+      ansible.builtin.import_role:
+        name: geerlingguy.certbot
+      vars:
+        certbot_certs: "{{ certs }}"
+        certbot_install_method: snap
+        certbot_create_method: webroot
+        certbot_create_if_missing: true
+        certbot_agree_tos: true
+        certbot_testmode: true
+        certbot_email: "{{ acme_email }}"
+        # Use staging if we're only in the dev environment
+        certbot_create_extra_args: "--server {{ acme_directory }}"
+        # TODO: Can/should we do this as some other user? Not sure. What permissions would it need?
+        certbot_renew_cron_user: root
       when: use_letsencrypt
       tags: acme
+
+    # - name: Install Letsencrypt certificates
+    #   ansible.builtin.import_tasks: acme.yml
+    #   when: use_letsencrypt
+    #   tags: acme
 
   handlers:
 
