--- a/requirements.yml
+++ b/requirements.yml
@@ -16,6 +16,9 @@ roles:
 - name: geerlingguy.php
   version: 6.0.0
 
+- name: geerlingguy.certbot
+  version: 5.2.0
+
 collections:
   - name: basicbind.swap_file
     version: 2.0.3
