--- a/playbooks/web_dev_site/group_vars/all/letsencrypt.yml
+++ b/playbooks/web_dev_site/group_vars/all/letsencrypt.yml
@@ -1,3 +1,3 @@
 # Live environment
-acme_directory: "https://acme-v02.api.letsencrypt.org/directory"
 use_letsencrypt: true
+acme_use_staging_server: false
