--- a/playbooks/web_dev_site/group_vars/dev/letsencrypt.yml
+++ b/playbooks/web_dev_site/group_vars/dev/letsencrypt.yml
@@ -1,3 +1,3 @@
-# Staging environment
-acme_directory: "https://acme-staging-v02.api.letsencrypt.org/directory"
+# Dev environment
 use_letsencrypt: "{{ not (is_vagrant|default(false)) }}"
+acme_use_staging_server: true
