--- a/playbooks/web_dev_site/vars.yml
+++ b/playbooks/web_dev_site/vars.yml
@@ -9,6 +9,7 @@ default_docroot_group: www-data
 self_signed_ca_DNS: DNS:ca.gothick.org.uk
 
 acme_well_known_dir: /var/www/well-known
+acme_sites_dir: /etc/letsencrypt/live
 acme_keys_dir: /etc/ssl/private
 acme_certs_dir: /etc/ssl/certs
 acme_csr_dir: /etc/ssl/csr
@@ -99,6 +100,9 @@ websites:
   #   enable_pagespeed: false, # Seemed to be causing minor issues, while not speeding much up.
 
   - server_name: "dev.gothick.org.uk"
+    aliases:
+      - "devtest1.gothick.org.uk"
+      - "devtest2.gothick.org.uk"
     docroot: "{{ sites_dir }}/gothick.org.uk/dev.gothick.org.uk"
     docroot_owner: root
     docroot_group: root
