--- a/playbooks/web_apache/vars.yml
+++ b/playbooks/web_apache/vars.yml
@@ -15,5 +15,6 @@ apache_mods_enabled:
   - proxy
   - proxy_fcgi
   - alias
+  # You haven't bothered with pagespeed this time. More trouble than it's worth.
 
 # apache_mods_disabled: []
