--- a/playbooks/web_dev_site/group_vars/dev/letsencrypt.yml
+++ b/playbooks/web_dev_site/group_vars/dev/letsencrypt.yml
@@ -1,3 +1,4 @@
 # Dev environment
 use_letsencrypt: "{{ not (is_vagrant|default(false)) }}"
+hostname_suffix: '.localhost'
 acme_use_staging_server: true
