Helps if you correctly add your ansible user to the sudoers...

--- a/playbooks/create_ansible_user/main.yml
+++ b/playbooks/create_ansible_user/main.yml
@@ -18,9 +18,10 @@
         name: arillso.sudoers
       vars:
         sudoers_sudoers_d_files:
-          - name: ansible
-            entry: |
-              ansible ALL=(ALL) NOPASSWD: ALL
+          ansible:
+            privileges:
+              - name: ansible
+                entry: "ALL=(ALL) NOPASSWD: ALL"
 
     - name: Add authorised keys
       ansible.posix.authorized_key:
